@@ -2,6 +2,7 @@ ChangeLog for pommed
 --------------------
 
 version 1.36:
+	- pommed: probe for applesmc through /sys/class/hwmon.
 
 version 1.35:
 	- pommed: fix crash if no fnmode sysfs node found.
